# slope_stability_petsc4py

./: .dockerignore  .gitignore  README.md  bootstrap.sh  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  validate.sh
benchmarks/: README.md  execute_visualisation_notebooks.py  generate_benchmark_notebooks.py  generate_benchmark_readmes.py  notebook_support.py  prepare_committed_notebook_artifacts.py
build_scripts/: activate_local_petsc_env.sh  bootstrap_petsc4py_venv.sh  build_local_petsc_opt.sh
docs/: CHECKOUTS.md  GAMG_elasticity.md  INSTRUCTIONS.md  P4_tangent_parallel_brief.md  PHASE_SUMMARY_2026-03-10.md  README.md  WORKPLAN.md  config_case_matrix.md  config_scheme_3d.md  docs.md
meshes/: README.md
tests/: mpi_bddc_overlap_check.py  mpi_owned_constitutive_exchange_check.py  mpi_preconditioner_linear_check.py  test_3d_hetero_ssr_gmsh_loader.py  test_benchmark_notebooks.py  test_cli_assembly_policy.py  test_cli_progress.py  test_compare_preconditioners.py  test_constitutive_comm.py  test_damping.py  test_distributed_tangent_rows.py  test_high_order_vtu_export.py  test_linear_solver_memory_guards.py  test_ll_initial_predictor.py  test_newton_cleanup.py  test_owned_constitutive_exchange.py  test_owned_constitutive_exchange_mpi.py  test_petsc_matis_bddc_helpers.py  test_pmg_hierarchy.py  test_postprocess_field_exports.py  test_preconditioner_mpi.py  test_probe_bddc_elastic.py  test_probe_hypre_frozen.py  test_solver_preconditioner_policies.py  test_ssr_indirect_init.py  test_tangent_microbench_smoke.py
tools/: convert_matlab_hdf5_to_gmsh_tet4.py  (+1 more)
(+512 files in other folders)
